# io-rts-esp32

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  future-improvements-prompt.md  pair-remove-implementation-prompt.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.lilygo_lora32  sdkconfig.defaults.lilygo_t3s3
.github/workflows/: release.yml
components/json_streaming_parser2/: CMakeLists.txt  JsonPathCallback.cpp  JsonStreamingParser2.cpp
components/json_streaming_parser2/test/: CMakeLists.txt  run_test.sh  test_parser.cpp
components/oled_display/: CMakeLists.txt  oled_display.c
components/web_server/: CMakeLists.txt  Kconfig.projbuild  web_server.cpp
config/: HardwareConfig.cpp  HardwareConfig.hpp  IoHomeConfig.cpp  IoHomeConfig.hpp  MqttConfig.cpp  NetworkConfig.cpp  NetworkConfig.hpp  SyslogConfig.cpp  SyslogConfig.hpp
doc/: configuration.md  tilted_cover.md
docs/: TODO.md  bug-analysis-2026-06-23.md  pairing_sequence_reference.md
helpers/: CmdLineIoTools.cpp  CmdLineMqttTools.cpp  CmdLineNetworkTools.cpp  DeviceStorage.cpp  DeviceStorage.hpp  EncodingHelpers.cpp  EncodingHelpers.hpp  MqttHelpers.cpp  MqttHelpers.hpp  NetworkHelpers.cpp  NetworkHelpers.hpp  NvsHelpers.cpp
io-homecontrol/: IoHomeControl.cpp  IoHomeControl.hpp
io-homecontrol/protocol/: iohome_commands.cpp  iohome_commands.hpp  iohome_constants.h  (+3 more)
main/: CMakeLists.txt  IoRtsManager.cpp  IoRtsManager.hpp  Kconfig.projbuild  cmd_line_management.cpp  idf_component.yml  main.cpp
prompts/: BUG_REPORT.md
web_data/: index.html
web_data_v2/: index.html
(+30 files in other folders)
